# psp-examples

./: .gitignore  Makefile  README.md
.github/actions/setup-workspace/: action.yaml
.github/workflows/: all.yml  encrypted-messaging.yml  makefile.yml  private-compressed-account.yml  private-payments.yml  rock-paper-scissors.yml  streaming-payments.yml  swap.yml
encrypted-messaging/: Anchor.toml  package.json
encrypted-messaging/circuit/: encryptedMessagingMain.circom  encrypted_messaging.circom  encrypted_messaging.light
encrypted-messaging/programs/encrypted-messaging/: Cargo.toml
encrypted-messaging/tests/: encrypted-messaging.ts  helpers.ts
multisig/: package.json
multisig/.fleet/: run.json
multisig/circuit/: multisig.circom
multisig/circuits/: multisig.light
multisig/circuits/multisig/: multisig.circom
multisig/src/: client.ts  multisigParams.ts  transaction.ts
multisig/tests/: multisig.ts
private-compressed-account/: README.md  package.json
private-compressed-account/circuits/compressed-account-update/: insert_leaf.circom
private-compressed-account/circuits/inclusion-proof/: inclusion_proof.circom
private-compressed-account/programs/private-compressed-account/: Cargo.toml
private-compressed-account/sdk/: merkleTreeWithHistory.ts  poseidonCompressedAccount.ts
private-compressed-account/tests/: private-compressed-account.ts
private-payments/: package.json
private-payments/src/: main.ts
rock-paper-scissors/: README.md  package.json
rock-paper-scissors/circuit/: rockPaperScissorsMain.circom  rock_paper_scissors.circom  rock_paper_scissors.light
rock-paper-scissors/circuits/rock-paper-scissors/: rock_paper_scissors.circom  rock_paper_scissors.light
rock-paper-scissors/programs/rock-paper-scissors/: Cargo.toml
rock-paper-scissors/programs/rock-paper-scissors/src/: lib.rs  light_utils.rs  processor.rs  psp_accounts.rs  verifying_key.rs  verifying_key_rock_paper_scissors.rs
rock-paper-scissors/tests/: rock-paper-scissors.ts
streaming-payments/: Anchor.toml  README.md  package-lock.json  package.json
streaming-payments/circuit/: pspPaymentStreaming.circom  pspPaymentStreaming.light  pspPaymentStreamingMain.circom
streaming-payments/circuits/psp-payment-streaming/: pspPaymentStreaming.circom  pspPaymentStreaming.light  (+2 more)
streaming-payments/programs/psp_payment_streaming/: Cargo.toml
streaming-payments/programs/psp_payment_streaming/src/: lib.rs  light_utils.rs  processor.rs  verifying_key.rs  verifying_key_psp_payment_streaming.rs
streaming-payments/tests/: psp_payment_streaming.ts  streaming-payments.ts
swap/: package.json
swap/circuit/: swap.circom  swap.light
swap/programs/swaps/: Cargo.toml
swap/programs/swaps/src/: lib.rs  processor.rs  psp_accounts.rs  verifying_key_swaps.rs
swap/tests/: swap.ts  swaps.ts
(+27 files in other folders)
