[package]
name = "rock_paper_scissors"
version = "0.1.0"
description = "Created with Light Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rock_paper_scissors"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
merkle_tree_program = { git = "https://github.com/lightprotocol/light-protocol", features = ["cpi"], rev = "8b7c5f4c0c2a9acbfdd32183ae5ccfd8ec96bf90" }
verifier_program_two = { git = "https://github.com/lightprotocol/light-protocol", features = ["cpi"], rev = "8b7c5f4c0c2a9acbfdd32183ae5ccfd8ec96bf90" }
light-macros = "0.1.0"
light-verifier-sdk = { git = "https://github.com/lightprotocol/light-protocol", rev = "8b7c5f4c0c2a9acbfdd32183ae5ccfd8ec96bf90" }
solana-program = "1.16.4"
groth16-solana = "0.0.2"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}