[package]
name = "swap"
version = "0.1.0"
description = "Created with Light Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swaps"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
merkle_tree_program = { git = "https://github.com/lightprotocol/light-protocol", features = ["cpi"], branch = "main" }
verifier_program_two = { git = "https://github.com/lightprotocol/light-protocol", features = ["cpi"], branch = "main" }
light-macros = { git = "https://github.com/lightprotocol/light-protocol", branch = "main" }
light-verifier-sdk = { git = "https://github.com/lightprotocol/light-protocol", branch = "main" }
solana-program = "1.16.4"
groth16-solana = "0.0.2"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}